fix: responsive on tablet

--- a/src/components/Testimonials.css
+++ b/src/components/Testimonials.css
@@ -13,3 +13,31 @@
     border-radius: 7rem;
     object-fit: fill;
 }
+
+.quote-right {
+    margin-left: auto;
+    -moz-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+}
+
+.watermark {
+    position: relative;
+    margin: 0;
+}
+
+
+.watermark:before {
+    content: "Testimonial";
+    position: absolute;
+    z-index: 9999;
+    inset: 0;
+    transform: rotate(-45deg);
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    font-size: 30px;
+    font-weight: bold;
+    opacity: 0.1;
+}
